--- a/CSS/style_blender.css
+++ b/CSS/style_blender.css
@@ -28,7 +28,7 @@ body{
     z-index: -1;    
     width: 100%;
     height: 100vh;
-    background: url("../Img/blender/mati.png")no-repeat center;
+    background: url("../Img/blender/mati.jpg")no-repeat center;
     background-size:cover;
 }
 
