ゲームサイトの更新

--- a/CSS/style_game.css
+++ b/CSS/style_game.css
@@ -151,7 +151,7 @@ h1{
 
 /*  header  */
 #header{
-    height: 10%;    
+    height: 8%;    
     width: auto;   
     transform: translate(0,25%);
     text-align: center;
@@ -209,13 +209,14 @@ h1{
     width: 250px; 
     height: 700px;
     overflow-y:scroll;
+    overflow-x:hidden;
     display:inline-block;
     justify-content: space-between;
     
 }
 #contentsMenu::-webkit-scrollbar{
-    width: 10px;
-    height: 0;
+    width: 8px;
+    height: 8px;
 }
 
 #contentsMenu::-webkit-scrollbar-track{
@@ -252,7 +253,6 @@ h1{
 #contentsMenu img{
     width: 80%;
     height: auto;
-    
     transform: scale(1,1);
     transition-duration: 0.3s;
     outline: white solid 3px;
@@ -273,27 +273,54 @@ h1{
     min-width: 30%;
     max-width: 65%;
     height: auto;
-    width: auto;
+    width: 65%;
     background-color: white;  
     border-radius: 20px 20px 0 0;
     padding: 10px;
     margin: 10px;
 }
-.pics{
+.content_wrap{
+    position:relative;
+    padding-top: 60%;
+
     text-align: center;
-    padding: 1em;
+    overflow: hidden;
+}
+.flex-item{
+    flex-basis: 100%;
 }
 #contentsExplanation img{
-    min-height: 30%;
-    max-height: 50%;
-    min-width: 30%;
-    max-width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;    
+    transform: translate(-50%,-50%);
     width: 80%;
-    height: 80%;
+    height: 70%;
+    object-fit: cover;
+
 }
 .contentsText{
     padding: 1em;
     font-size: 20px;
+    overflow-y: scroll;
+
+}
+
+.contentsText::-webkit-scrollbar{
+    width: 10px;
+    height: 0;
+}
+
+.contentsText::-webkit-scrollbar-track{
+    border-radius: 20px;
+    background-color: darkgray;
+}
+
+.contentsText::-webkit-scrollbar-thumb{
+
+    border-radius: 20px;
+    box-shadow: inset 3px -3px 5px rgba(0,0,0,0.2);
+    background-color:olive;
 }
 
 
