--- a/CSS/style_game.css
+++ b/CSS/style_game.css
@@ -13,6 +13,9 @@ body{
 .text_font{
     font-family: 'Noto Sans JP', sans-serif;
 }
+p{
+    margin:10px ;
+}
 
 
 .contents_background{
@@ -50,16 +53,6 @@ body{
     }
 }
 
-
-/* load */
-#loading{
-    display: block;
-    z-index: 9999;
-}
-#loaded {
-    opacity: 0;
-    visibility: hidden;
-}
 h1{
     top: 50%;
     left: 50%;
@@ -70,84 +63,7 @@ h1{
     font-size: 80px;
     text-align: center;
 }
-.clickTrigger{
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 50%;
-    margin: 0;
 
-}
-.loadButton{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100px;
-    height: 50px;
-    transform: translate(-50%, 100%);
-
-    background-color: rgb(251, 251, 47);
-    color: rgb(0, 0, 0);
-    text-align: center;
-    font-size: 30px;
-    border-radius: 20px;
-    border: 0;
-
-    cursor: pointer;
-}
-.loadButton:hover{ 
-    background-color: rgb(255, 166, 0);
-}
-.loadButton:active{
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
-    inset 2px 2px 3px rgba(0, 0, 0, .6);
-}
-.loadButton.loaded {
-    animation: fadeOut 3s forwards;
-}
-
-#loadIcon_wrap{
-    display: none;
-    position: fixed;
-    left: 50%;
-    top:60%;
-    z-index: 10;
-    transform: translate(-30px,0);
-
-}
-.loadIcon,
-.loadIcon::after{
-    border-radius: 50%;
-    width: 10em;
-    height: 10em;
-}
-.loadIcon{
-    font-size: 10px;
-    position: relative;
-    text-indent: -9999em;
-    border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-    border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-    border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-    border-left: 1.1em solid #ffffff;
-    transform: translateZ(0);
-
-    left: 0;
-    top: 0;
-    width: 50px;
-    height: 50px;    
-    animation: load8 1.1s infinite linear;
-
-}
-@keyframes load8 {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-}
 
 /*  header  */
 #header{
@@ -165,9 +81,9 @@ h1{
     height: 100%;
     transform: translate(3%,0);
 
-    overflow-y:hidden;
+
     background-size: 100% 100%;
-    display:none;    
+    /* display:none;     */
     z-index: 0;
 }
 #contents::-webkit-scrollbar{
@@ -256,6 +172,7 @@ h1{
     transform: scale(1,1);
     transition-duration: 0.3s;
     outline: white solid 3px;
+    cursor: pointer;
 }
 #contentsMenu img:hover{
     transform: scale(1.1,1.1);
@@ -272,17 +189,17 @@ h1{
 #contentsExplanation{
     min-width: 30%;
     max-width: 65%;
-    height: auto;
-    width: 65%;
+    height: 60%;
+    width: 40%;
     background-color: white;  
     border-radius: 20px 20px 0 0;
+
     padding: 10px;
-    margin: 10px;
+    margin: 20px;
 }
 .content_wrap{
     position:relative;
     padding-top: 60%;
-
     text-align: center;
     overflow: hidden;
 }
@@ -294,13 +211,14 @@ h1{
     top: 50%;
     left: 50%;    
     transform: translate(-50%,-50%);
-    width: 80%;
-    height: 70%;
+    width: 70%;
+    height: 60%;
     object-fit: cover;
 
 }
 .contentsText{
-    padding: 1em;
+    padding-top: 0;
+    padding: 10px;
     font-size: 20px;
     overflow-y: scroll;
 
